# DataCompression

./: CMakeLists.txt  HuffmanCompress.cpp  HuffmanDecompress.cpp  README.md  TrieTree.cpp  TrieTree.hpp  strings.txt
Files/: BSTCompress  word.out
